--- a/sw/planning/target_search/CMakeLists.txt
+++ b/sw/planning/target_search/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(common)
+project(target_search)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -7,13 +7,18 @@ project(common)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
+find_package(Eigen3 REQUIRED)
 find_package(catkin REQUIRED
-  geometry_msgs
-  roscpp
+    common
+    geometry_msgs
+    roscpp
+    active_perception
 )
 
+
+
 ## System dependencies are found with CMake's conventions
-find_package(Eigen3 REQUIRED)
+# find_package(Boost REQUIRED COMPONENTS system)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -103,8 +108,8 @@ find_package(Eigen3 REQUIRED)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
  INCLUDE_DIRS include
-#  LIBRARIES common
-#  CATKIN_DEPENDS other_catkin_pkg
+#  LIBRARIES target_search
+#  CATKIN_DEPENDS active_perception
 #  DEPENDS system_lib
 )
 
@@ -117,13 +122,12 @@ catkin_package(
 include_directories(
     include
     ${catkin_INCLUDE_DIRS}
-    ${Eigen3_INCLUDE_DIRS} 
-
+    ${EIGEN3_INCLUDE_DIRS} 
 )
 
 ## Declare a C++ library
-# add_library(common
-#   src/${PROJECT_NAME}/common.cpp
+# add_library(${PROJECT_NAME}
+#   src/${PROJECT_NAME}/target_search.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -134,7 +138,8 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(test_utils test/test_utils.cpp)
+# add_executable(${PROJECT_NAME}_node src/target_search_node.cpp)
+add_executable(test_vpt test/test_vpt.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -147,7 +152,11 @@ add_executable(test_utils test/test_utils.cpp)
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(test_utils
+# target_link_libraries(${PROJECT_NAME}_node
+#   ${catkin_LIBRARIES}
+# )
+
+target_link_libraries(test_vpt
   ${catkin_LIBRARIES}
 )
 
@@ -198,7 +207,7 @@ install(DIRECTORY include/${PROJECT_NAME}/
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_common.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_target_search.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
