--- a/sw/bringup/config/params.yaml
+++ b/sw/bringup/config/params.yaml
@@ -1,5 +1,6 @@
-use_active_perception: true
-use_semantic_search: true
+use_active_perception: true 
+use_semantic_search: true # LNS with or without priorities
+use_lkh: false # LKH without priorities
 
 # coverage vs. semantic priority
 # 0: pure coverage
@@ -17,7 +18,7 @@ object_finder:
 target_planner:
   rmin: 0.3
   min_vpt_clearance: 0.2
-  min_info_gain: 15
+  min_info_gain: 10
 
 perception:
   attention_map:
