--- a/sw/planning/target_search/package.xml
+++ b/sw/planning/target_search/package.xml
@@ -50,6 +50,7 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <depend>message_generation</depend>
+  <depend>active_perception</depend>
   <exec_depend>message_runtime</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
