--- a/sw/perception/sensor_model/package.xml
+++ b/sw/perception/sensor_model/package.xml
@@ -53,6 +53,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>common</build_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>visualization_msgs</build_export_depend>
@@ -60,6 +61,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>visualization_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>common</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
